got the buttons to show correctly. Next target is the styling and spacing of the page

--- a/style.css
+++ b/style.css
@@ -10,7 +10,25 @@ form {
     padding: 20px;
 }
 
+button,
+input[type="submit"] {
+  padding: 5px 20px;
+  margin: 0 10px 10px 0;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+  background: #2332d6;
+  border: 0;
+  border-radius: 5px;
+  box-shadow: 2px 2px 3px #bbb;
+}
+
 #heroes {
     width: 70%;
     background: grey;
 }
+
+.hero-item {
+    float: left;
+    padding: 10px;
+  }
